[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
authors = ["Javed Habib <javed@elixircloud.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13.0",
]
description = "Jupyterhub configuration, images and scripts."
maintainers = ["Javed Habib <javed@elixircloud.com>"]
name = "pa-jupyterhub"
readme = "README.md"
repository = "https://github.com/elixircloud/jupyterhub"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
jupyterhub = ">=5.2.1,<6.0.0"
python = ">=3.13.0"

[tool.poetry.group.code_quality]
optional = true

[tool.poetry.group.code_quality.dependencies]
mypy = ">=1.10.0"
ruff = ">=0.4.10"
typos = ">=1.22.8"

[tool.poetry.group.misc]
optional = true

[tool.poetry.group.misc.dependencies]
pre-commit = ">=3.7.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.2,<9.0.0"
pytest-cov = ">=5.0.0,<=6.0.0"

[tool.poetry.group.types]
optional = true

[tool.poetry.group.types.dependencies]

[tool.poetry.group.vulnerability]
optional = true

[tool.poetry.group.vulnerability.dependencies]
bandit = ">=1.7.8,<2.0.0"
safety = ">=3.2.0,<4.0.0"

[tool.ruff]
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "B", # flake8-bugbear
  "C90", # mccabe
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "PL", # pylint
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
